Remove references to integration